# tradingagents-dashboard

./: .env.example  .gitignore  README.md  alembic.ini  project.md  pyproject.toml
.gemini/: GEMINI.md
.github/workflows/: deploy.yml
alembic/: env.py
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py
app/routes/: about.py  briefing.py  crypto.py  dashboard.py  global_news.py  history.py  intelligence.py  login.py  polymarket.py  polymarket_api.py  portfolio.py  public.py  run.py  simtrader.py  status.py  ticker.py  watchlist.py
app/services/: briefing.py  colonel_wolfe.py  cost.py  global_intel.py  intel_data.py  poly_runner.py  runner.py  simtrader.py  token_tracker.py
app/static/wp-admin/: index.html
app/templates/: about.html  base.html  briefing.html  crypto.html  crypto_intelligence.html  crypto_news.html  dashboard.html  global_news.html  history.html  landing.html  login.html  poly_agents.html  poly_analysis.html  poly_intelligence.html  poly_news.html  portfolio.html  run.html  simtrader.html  status.html  the_process.html  ticker_detail.html  watchlist.html
app/templates/intelligence/: coming_soon.html  congress.html  contracts.html  earnings.html  economic.html  edgar.html  fda.html  fred.html  hub.html  reddit.html  screener.html  sectors.html
app/templates/partials/: ticker_card.html
app/templates/public/: about.html  base.html  contact.html  faq.html  home.html  how.html
scripts/: create_trade_plans_table.sql  daily_cron.py  fix_crwv.py  run_single.py  seed_watchlist.py
