[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-dashboard"
version = "0.1.0"
description = "Personal web dashboard for TradingAgents multi-agent stock analysis"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "cryptography>=44.0.0",
    "alembic>=1.15.0",
    "pydantic-settings>=2.7.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]
